# eth-tui

./: Cargo.toml  LICENSE  README.md
abis/: erc1155.json  erc20.json  erc721.json
src/: app.rs  config.rs  events.rs  main.rs  theme.rs  utils.rs
src/components/: address_view.rs  block_detail.rs  block_list.rs  contract_read.rs  dashboard.rs  gas_tracker.rs  header.rs  help.rs  mempool.rs  mod.rs  search.rs  status_bar.rs  storage_inspector.rs  tx_debugger.rs  tx_detail.rs  watch_list.rs
src/data/: abi.rs  cache.rs  chains.rs  decoder.rs  ens.rs  export.rs  mod.rs  provider.rs  types.rs  watchlist.rs  ws.rs
