[package]
name = "eth-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Ethereum
alloy = { version = "0.12", features = [
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-types",
    "rpc-types-trace",
    "json-abi",
    "dyn-abi",
    "sol-types",
    "transports",
    "transport-http",
    "transport-ws",
    "pubsub",
] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Data
serde = { version = ">=1, <1.0.208", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = "0.4"
color-eyre = "0.6"
lru = "0.12"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
dirs = "5"
